# backend/astraflow-api/api/astraflow/v1/feedback_http.pb.go
@@ -1,0 +1,77 @@
+// Code generated by protoc-gen-go-http. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-http v2.9.2
+// - protoc             (unknown)
+// source: astraflow/v1/feedback.proto
+
+package v1
+
+import (
+	context "context"
+	http "github.com/go-kratos/kratos/v3/transport/http"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the kratos package it is being compiled against.
+var _ = new(context.Context)
+
+const _ = http.SupportPackageIsVersion3
+
+const OperationFeedbackServiceCreateFeedback = "/astraflow.v1.FeedbackService/CreateFeedback"
+
+type FeedbackServiceHTTPServer interface {
+	CreateFeedback(context.Context, *CreateFeedbackRequest) (*CreateFeedbackResponse, error)
+}
+
+func RegisterFeedbackServiceHTTPServer(s *http.Server, srv FeedbackServiceHTTPServer) {
+	r := s.Route("/")
+	r.Handle("POST", "/v1/feedbacks", _FeedbackService_CreateFeedback0_HTTP_Handler(srv))
+}
+
+func _FeedbackService_CreateFeedback0_HTTP_Handler(srv FeedbackServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in CreateFeedbackRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationFeedbackServiceCreateFeedback)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.CreateFeedback(ctx, req.(*CreateFeedbackRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*CreateFeedbackResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
+type FeedbackServiceHTTPClient interface {
+	CreateFeedback(ctx context.Context, req *CreateFeedbackRequest, opts ...http.CallOption) (rsp *CreateFeedbackResponse, err error)
+}
+
+type FeedbackServiceHTTPClientImpl struct {
+	cc *http.Client
+}
+
+func NewFeedbackServiceHTTPClient(client *http.Client) FeedbackServiceHTTPClient {
+	return &FeedbackServiceHTTPClientImpl{client}
+}
+
+func (c *FeedbackServiceHTTPClientImpl) CreateFeedback(ctx context.Context, in *CreateFeedbackRequest, opts ...http.CallOption) (*CreateFeedbackResponse, error) {
+	var out CreateFeedbackResponse
+	pattern := "/v1/feedbacks"
+	path := http.BuildPath(pattern, in)
+	opts = append([]http.CallOption{
+		http.Accept("application/protojson"),
+		http.ContentType("application/protojson"),
+		http.Operation(OperationFeedbackServiceCreateFeedback),
+		http.PathTemplate(pattern),
+	}, opts...)
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
